--- a/foundations/block-and-inline/02-margin-and-padding-2/index.html
+++ b/foundations/block-and-inline/02-margin-and-padding-2/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="card">
-      <h1 class="title">I'm a card</h1>
-      <div class="content">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
-      <div class="button-container">and a <button>BIG BUTTON</button></div>
+    <div class="card marg-md pad-sm">
+      <h1 class="title pad-sm marg-sm">I'm a card</h1>
+      <div class="content pad-sm marg-sm">I have content inside me..lorem ipsum blah blah blah. Here's some stuff you need to read.</div>
+      <div class="button-container marg-sm pad-sm">and a <button class="pad-sm">BIG BUTTON</button></div>
     </div>
   </body>
 </html>
